# sys_mon_tools

./: .gitignore  CHANGELOG.md  IARM_BUS_SetPowerStatus.c  IARM_BUS_UIEventSimulator.c  IARM_Bus_CheckPowerStatus.c  IARM_event_sender.c  IrInputRemoteKeyCodes.h  Makefile  Makefile.am  UIEventSimulator.h  build_dependencies.sh  configure.ac  cov_build.sh  rdk_build.sh  rdk_env.xml  sys_mfr_utils.c  uInputInternal.h  uinput.c
.github/: CODEOWNERS
.github/workflows/: native_full_build.yml
iarm-event-sender/: IARM_event_sender.c
iarm_query_powerstate/: IARM_Bus_CheckPowerStatus.c
iarm_set_powerstate/: IARM_BUS_SetPowerStatus.c
key_simulator/: IARM_BUS_UIEventSimulator.c  IARM_UIEventSimulator.c  IrInputRemoteKeyCodes.h  RDKIrKeyCodes.h  UIEventSimulator.h  uInputInternal.h  uinput.c
mfr-utils/: sys_mfr_utils.c  sys_mfr_utils.h
mocks/: IrKeyCodes.h  libIARMCore.h  libIBus.h  mfrApi.h  mfrMgr.h  mfrTypes.h  mfr_wifi_api.h  mfr_wifi_types.h  mockInternal.cpp  sysMgr.h
power-state-monitor/: powerStateMonitorMain.c
stubs/: iarm_stubs.cpp  power_controller.h  powerctrl_stubs.cpp
